src/sass/partials/_layout.scss
.main-app {
    position: relative;
    height: 100vh;


    //// MAIN GRID ////
    display: grid;
    grid-template-rows: 4rem 95vh 80rem 60rem 10rem;
    grid-template-columns: repeat(8, 1fr);

}

.section--hero {
    grid-column: 1 / 9;
    grid-row: 1 / 3;
    justify-items: center;


    margin-top: -6vh;
    width: 100vw;
    background-image: url('../static/bg--primary.svg');
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-size: cover;
}


.story {
    grid-row: 3 / 4;
    grid-column: 1 / 9;
}

.section--about {
    grid-column: 1 / 9;
    grid-row: 4 / 5;
    position: relative;
    overflow-y: scroll;

    margin-top: -40rem;
    // Reverse background image
    transform: rotate(180deg);
    background-image: url('../static/bg--secondary.svg');
    background-size: contain;

    display: flex;
    justify-content: center;
    align-items: center;
    z-index: -50;

    .rotation-correction {
        //Correct scroll reverse
        transform: rotate(180deg);
        display: flex;
        justify-content: center;
        align-items: center;
    }

}



.footer {
    grid-row: 5 / 6;
    grid-column: 1 / 9;
}

